Ensure gap between quotes in carousel

--- a/src/css/partials/components.css
+++ b/src/css/partials/components.css
@@ -44,6 +44,7 @@ animated-carousel ul {
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 100%;
+  column-gap: 0.5rem;
   align-items: center;
   overflow-x: auto;
   scroll-behavior: smooth;
